Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128518

[REG 6.6.3->6.7.2] Vertical scrollbar can appear unpainted until window is resized

XMLWordPrintable

    • Windows
    • 7b146e530 (dev), f1bab31ff (6.8)

      In Qt 6.7.2, a vertically oriented QScrollBar can appear unpainted until its container/window is resized vertically.

      This can be observed by building OBS Studio at commit 9925345eb6f93ee5e801d4b8c01f0378cc51586e, but with Qt 6.7.2 instead of 6.6.3, and running it on Windows 11.

      Once OBS Studio is running, note that the preview's vertical scrollbar appears unpainted (see attached screenshots).

      This issue only manifests on Windows 11. It does not show up on Windows 10.

      I haven't been able to reproduce this in a Qt example or in a minimal reproducer, but it is still a change in behavior between Qt 6.6.3 and 6.7.2 when building OBS Studio. I'll try to bisect Qt if someone doesn't have a guess as to what could be causing this.

        1. Qt 6.6.3 QScrollbar painted.png
          47 kB
          Ryan Foster
        2. Qt 6.7.0 QScrollbar not painted.png
          52 kB
          Ryan Foster
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            wladimir.leuschner Wladimir Leuschner
            rytoex Ryan Foster
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes