src/plugins/styles/modernwindows/qwindows11style.cpp
@@ -2152,7 +2152,8 @@ void QWindows11Style::polish(QWidget* widget)
         bool layoutDirection = widget->testAttribute(Qt::WA_RightToLeft);
         widget->setAttribute(Qt::WA_OpaquePaintEvent,false);
         widget->setAttribute(Qt::WA_TranslucentBackground);
-        widget->setWindowFlag(Qt::FramelessWindowHint);
+        if (!isScrollBar)
+            widget->setWindowFlag(Qt::FramelessWindowHint);
         widget->setWindowFlag(Qt::NoDropShadowWindowHint);
         widget->setAttribute(Qt::WA_RightToLeft, layoutDirection);
         widget->setAttribute(Qt::WA_WState_Created, wasCreated);
